--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="email_no_valido">Formato de email introducido no válido</string>
     <string name="pwd_no_valido">La contraseña no cumple con los requisitos</string>
     <string name="pwd_no_ok">Contraseña incorrecta</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tvcartelera">Salas:</string>
+    <string name="btnCartelera">Ver Cartelera</string>
 </resources>
