recycled en proceso

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="cambiar_pwd_ok">Contraseña actualizada</string>
     <string name="cambiar_pwd_no_ok">Error al cambiar la contraseña</string>
     <string name="tv_valid_pwd">La contraseña debe contener al menos una mayúscula, una minúscula, un número y uno de los siguientes caracteres especiales: ?¿!#%$</string>
+    <string name="tituloCartelera">CARTELERA:</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tituloTaquilla">TAQUILLA</string>
+    <string name="titulo_pelicula">Titulo:</string>
+    <string name="sinopsis_pelicula">Sinopsis:</string>
 </resources>
