--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tituloTaquilla">TAQUILLA</string>
-    <string name="titulo_pelicula">Titulo:</string>
-    <string name="sinopsis_pelicula">Sinopsis:</string>
+    <string name="titulo_pelicula">TITULO:</string>
+    <string name="sinopsis_pelicula">SINOPSIS:</string>
 </resources>
