--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="sala_pelicula">SALA:</string>
     <string name="tv_entradas">Nº Entradas:</string>
     <string name="tv_precio">Precio:</string>
+    <string name="btnEntradas">COMPRAR ENTRADAS</string>
+    <string name="tv_agradecimiento">!!!QUE DISFRUTE DE LA PELÍCULA!!!</string>
+    <string name="tv_asientos">ELIJA SUS ASIENTOS</string>
 </resources>
