taquilla faltan pequeños detalles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="intrFila">Elija Fila</string>
     <string name="asiento">Asiento:</string>
     <string name="intAsiento">Asiento</string>
+    <string name="btn_elige_asientos">ELIGE ASIENTO</string>
 </resources>
