--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="asiento">Asiento:</string>
     <string name="intAsiento">Asiento</string>
     <string name="btn_elige_asientos">ELIGE ASIENTO</string>
+    <string name="compra_hecha">"Entradas compradas"</string>
 </resources>
