Añadida hora en TaquillaFragment y corregido bug en precio entradas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="intAsiento">Asiento</string>
     <string name="btn_elige_asientos">ELIGE ASIENTO</string>
     <string name="compra_hecha">"Entradas compradas"</string>
+    <string name="tv_horario">Hora de la sesión:</string>
 </resources>
