--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="tv_entradas">Nº Entradas:</string>
     <string name="tv_precio">Precio:</string>
     <string name="btnEntradas">COMPRAR ENTRADAS</string>
-    <string name="tv_agradecimiento">!!!QUE DISFRUTE DE LA PELÍCULA!!!</string>
+    <string name="tv_agradecimiento">!!!DISFRUTE DE LA PELÍCULA!!!</string>
     <string name="tv_asientos">ELIJA SUS ASIENTOS</string>
     <string name="fila">Fila</string>
     <string name="intrFila">Elija Fila</string>
